[project]
name = "kata-coffee"
version = "0.1.0"
description = ""
authors = [
    {name = "denise.turkova",email = "denise.turkova@madetech.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "kata_coffee", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
